--- a/GreenGardenClient/GreenGardenClient/Views/Home/Index.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
 
     <div class="site-wrap" id="home-section">
 
-       
+
 
 
 
@@ -47,6 +47,7 @@
                     </div>
                 </div>
                 <div class="site-mobile-menu-body">
+
                 </div>
             </div>
             <div class="container">
@@ -179,6 +180,7 @@
                     z-index: 10;
                     white-space: nowrap; /* Prevent text wrapping */
                 }
+
                 .site-navbar {
                     position: fixed; /* Cố định header */
                     top: 0; /* Đặt header ở đầu trang */
@@ -291,9 +293,9 @@
                     <div class="row justify-content-center text-center">
                         <div class="col-md-7">
                             <div class="heading-39101 mb-5">
-                                <span class="backdrop text-center">Trải Nghiệm</span>
-                                <span class="subtitle-39191">Trải Nghiệm</span>
-                                <h3>Những trải nghiệm nổi bật</h3>
+                                <span class="backdrop text-center">Dịch Vụ</span>
+                                <span class="subtitle-39191">Dịch Vụ</span>
+                                <h3>Những dịch vụ nổi bật</h3>
                             </div>
                         </div>
                     </div>
@@ -381,6 +383,7 @@
 
 
             <div class="site-section">
+
                 <div class="container">
                     <div class="row justify-content-center text-center">
                         <div class="col-md-10">
@@ -398,13 +401,12 @@
                             foreach (var eventItem in ViewBag.Event)
                             {
                                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
-                                    <div class="post-entry-1 h-100 position-relative">
+                                    <div class="post-entry-1 h-100">
                                         <a href="@Url.Action("EventDetail", "Common", new { eventId = eventItem.EventId })">
                                             <img src="~/images/@eventItem.PictureUrl" alt="@eventItem.EventName" class="img-fluid"
                                                  style="width: 350px; height: 263px; object-fit: cover;">
                                         </a>
                                         <div class="post-entry-1-contents">
-                                            <!-- Thêm icon vào tên sự kiện -->
                                             <h2>
                                                 <a href="@Url.Action("EventDetail", "Common", new { eventId = eventItem.EventId })">
                                                     <i class="fa fa-calendar" aria-hidden="true"></i> @eventItem.EventName
@@ -416,9 +418,6 @@
                                                 <a href="#">@eventItem.CreatedByUserName</a>
                                             </span>
                                             <p>@eventItem.Description</p>
-
-                                     
-                                      
                                         </div>
                                     </div>
                                 </div>
@@ -428,23 +427,14 @@
                         {
                             <p class="text-danger">Không có sự kiện nào để hiển thị.</p>
                         }
-
-                    
-
                     </div>
-                    <div class="d-flex justify-content-center align-items-center" style="height: 100%; position: relative;">
-                        <a href="~/Common/Event" class="btn btn-link text-decoration-none">
-                            <i class="fa fa-arrow-right" aria-hidden="true"></i> Xem thêm
-                        </a>
+                    <div class="row">
+                        <div class="col-12 text-center mt-4">
+                            <a href="~/Common/Event" class="btn btn-link text-decoration-none">Xem thêm</a>
+                        </div>
                     </div>
-
-
 
                 </div>
-            </div>
-
-
-
             </div>
         </div>
 
