--- a/GreenGardenClient/GreenGardenClient/Views/Service/OrderFoodAndDrink.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/OrderFoodAndDrink.cshtml
@@ -838,10 +838,36 @@
                 </li>
             }
 
-            @for (int i = 1; i <= ViewBag.TotalPages; i++)
+            @* Trang đầu tiên *@
+            <li class="page-item @(1 == ViewBag.CurrentPage ? "active" : "")">
+                <a class="page-link" href="?categoryId=@ViewBag.CurrentCategoryId&sortBy=@ViewBag.SortBy&priceRange=@ViewBag.PriceRange&page=1">1</a>
+            </li>
+
+            @* Hiển thị "..." nếu trang đầu không liền kề trang hiện tại *@
+            @if (ViewBag.CurrentPage > 3)
+            {
+                <li class="page-item disabled"><span class="page-link">...</span></li>
+            }
+
+            @* Trang hiện tại và các trang lân cận *@
+            @for (int i = Math.Max(2, ViewBag.CurrentPage - 1); i <= Math.Min(ViewBag.TotalPages - 1, ViewBag.CurrentPage + 1); i++)
             {
                 <li class="page-item @(i == ViewBag.CurrentPage ? "active" : "")">
                     <a class="page-link" href="?categoryId=@ViewBag.CurrentCategoryId&sortBy=@ViewBag.SortBy&priceRange=@ViewBag.PriceRange&page=@i">@i</a>
+                </li>
+            }
+
+            @* Hiển thị "..." nếu trang cuối không liền kề trang hiện tại *@
+            @if (ViewBag.CurrentPage < ViewBag.TotalPages - 2)
+            {
+                <li class="page-item disabled"><span class="page-link">...</span></li>
+            }
+
+            @* Trang cuối cùng *@
+            @if (ViewBag.TotalPages > 1)
+            {
+                <li class="page-item @(ViewBag.TotalPages == ViewBag.CurrentPage ? "active" : "")">
+                    <a class="page-link" href="?categoryId=@ViewBag.CurrentCategoryId&sortBy=@ViewBag.SortBy&priceRange=@ViewBag.PriceRange&page=@ViewBag.TotalPages">@ViewBag.TotalPages</a>
                 </li>
             }
 
@@ -856,6 +882,7 @@
             }
         </ul>
     </div>
+
 
 
 
