--- a/GreenGardenClient/GreenGardenClient/Views/TicketManagement/CreateTicket.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/TicketManagement/CreateTicket.cshtml
@@ -503,7 +503,7 @@
 
             </script>
             <li class="app-menu__item active">
-                <a class="app-menu__link" href="~/FoodAndDrink/Index">
+                <a class="app-menu__link" href="~/TicketManagement/Index">
                     <i class='app-menu__icon bx bx-receipt'></i> <!-- Receipt icon as alternative -->
                     <span class="app-menu__label">Quản lý vé</span>
                 </a>
