--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderCombo.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderCombo.cshtml
@@ -772,7 +772,7 @@
                             {
                                 <div class="product-card">
                                     <div class="product-image">
-                                        <img src="@item.ImgUrl" alt="Bạc Xỉu">
+                                        <img src="~/images/Combo/@item.ImgUrl" alt="Bạc Xỉu">
                                     </div>
                                     <div class="product-details">
                                         <div class="product-name">@item.ComboName</div>
