--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderComboFood.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderComboFood.cshtml
@@ -831,7 +831,7 @@
 
                             <div class="product-card" data-item-id="@item.ComboId">
                                                     <div class="product-image">
-                                    <img src="@item.ImgUrl" alt="Bạc Xỉu">
+                                    <img src="~/images/Food/@item.ImgUrl" alt="Bạc Xỉu">
                                                     </div>
                                                     <div class="product-details">
                                                                 <div class="product-name">@item.ComboName</div>
