--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/UpdateCombo.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/UpdateCombo.cshtml
@@ -787,7 +787,7 @@
 
                                 <div class="product-card">
                                     <div class="product-image">
-                                        <img src="@item.ImgUrl" alt="combo">
+                                        <img src="~/images/Food/@item.ImgUrl" alt="combo">
                                     </div>
                                     <div class="product-details">
                                         <div class="product-name">
