--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/UpdateComboFood.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/UpdateComboFood.cshtml
@@ -774,7 +774,7 @@
 
                                 <div class="product-card">
                                     <div class="product-image">
-                                        <img src="@item.ImgUrl" alt="product">
+                                        <img src="~/images/Food/@item.ImgUrl" alt="product">
                                     </div>
                                     <div class="product-details">
                                         <div class="product-name">@item.ComboName</div>
