--- a/GreenGardenClient/GreenGardenClient/Views/Service/Cart.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/Cart.cshtml
@@ -663,7 +663,7 @@
                                     }
                                     else if (@item.Type == "Combo")
                                     {
-                                        <img src="@item.Image" alt="@item.Name" class="img-thumbnail" style="width: 120px;">
+                                        <img src="~/images/Combo/@item.Image" alt="@item.Name" class="img-thumbnail" style="width: 120px;">
                                     }
                                     else if (@item.Type == "Ticket")
                                     {
