--- a/GreenGardenClient/GreenGardenClient/Views/Service/OrderDetailHistory.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/OrderDetailHistory.cshtml
@@ -634,7 +634,7 @@
                                 {
                                     <div class="divider"></div>
                                     <div class="item-card">
-                                        <img src="@item.ImgUrl" alt="White & Red Nike Athletic Shoe">
+                                        <img src="~/images/Combo/@item.ImgUrl" alt="White & Red Nike Athletic Shoe">
                                         <div class="item-details">
                                             <p></p>
                                             <p class="item-title">@item.Name</p>
