--- a/GreenGardenClient/GreenGardenClient/Views/DashBoard/Index.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/DashBoard/Index.cshtml
@@ -10,7 +10,7 @@
 <html lang="en">
 
 <head>
-    <title>Danh sách nhân viên | Quản trị Admin</title>
+    <title>Thống kê | Quản trị Admin</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
