--- a/GreenGardenClient/GreenGardenClient/Views/EmployeeManagement/UpdateEmployee.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/EmployeeManagement/UpdateEmployee.cshtml
@@ -70,7 +70,7 @@
 <html lang="en">
 
 <head>
-    <title>Danh sách nhân viên | Quản trị Admin</title>
+    <title>Chi tiết nhân viên | Quản trị Admin</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
