--- a/GreenGardenClient/GreenGardenClient/Views/EventManagement/UpdateEvent.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/EventManagement/UpdateEvent.cshtml
@@ -11,7 +11,7 @@
 <html lang="en">
 
 <head>
-    <title>Quản lí sự kiện | Cập nhập sự kiện</title>
+    <title>Cập nhập sự kiện</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -723,7 +723,7 @@
                 </li>
 
                 <li>
-                    <a class="app-menu__item" href="table-data-product.html">
+                    <a class="app-menu__item" href="~/EmployeeManagement/Index">
                         <i class='app-menu__icon bx bx-purchase-tag-alt'></i>
                         <span class="app-menu__label">Quản lý nhân viên</span>
                     </a>
