--- a/GreenGardenClient/GreenGardenClient/Views/FoodAndDrinkManagement/CreateFoodAndDrink.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/FoodAndDrinkManagement/CreateFoodAndDrink.cshtml
@@ -42,7 +42,7 @@
 <html lang="en">
 
 <head>
-    <title>Danh sách nhân viên | Quản trị Admin</title>
+    <title>Tạo mới đồ ăn| Quản trị Admin</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
