--- a/GreenGardenClient/GreenGardenClient/Views/GearManagement/GearDetail.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/GearManagement/GearDetail.cshtml
@@ -778,7 +778,7 @@
             </li>
 
             <li class="app-menu__item active">
-                <a class="app-menu__link" href="~/FoodAndDrink/Index">
+                <a class="app-menu__link" href="~/GearManagement/Index">
                     <i class='app-menu__icon bx bx-wrench'></i> <!-- Gear/Tools icon -->
                     <span class="app-menu__label">Quản lý dụng cụ</span>
                 </a>
