--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/ComboDetail.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/ComboDetail.cshtml
@@ -707,7 +707,7 @@
                                 <i class="zoom-icon fa fa-search-plus" onclick="openModal()" style="position: absolute; top: 10px; right: 10px; font-size: 24px; cursor: pointer;"></i>
 
                                 <!-- Image -->
-                                <img src="@Model.ImgUrl" alt="Product Image" class="img-fluid img-thumbnail" id="productImage">
+                                <img src="~/images/Combo/@Model.ImgUrl" alt="Product Image" class="img-fluid img-thumbnail" id="productImage">
                             </div>
 
                             <!-- Modal for Zoomed Image -->
