--- a/GreenGardenClient/GreenGardenClient/Views/Service/CampingGearDetail.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/CampingGearDetail.cshtml
@@ -199,8 +199,8 @@
                             <ul class="site-menu main-menu js-clone-nav ml-auto ">
                                 <li ><a href="/Home" class="nav-link">Trang chủ</a></li>
                                 <li><a href="/Common/Event" class="nav-link">Sự kiện</a></li>
-                                <li class="has-dropdown">
-                                    <a href="/Service" class="active"  class="nav-link">Dịch vụ</a>
+                                <li class="has-dropdown active">
+                                    <a href="/Service"  class="nav-link">Dịch vụ</a>
                                     <ul class="dropdown">
                                         <li><a href="/Service/ComboList" class="nav-link">Danh sách combo vé</a></li>
                                         <li><a href="/Service/OrderTicket" class="nav-link">Danh sách vé</a></li>
