--- a/GreenGardenClient/GreenGardenClient/Views/Service/ComboDetail.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/ComboDetail.cshtml
@@ -198,12 +198,12 @@
                             <ul class="site-menu main-menu js-clone-nav ml-auto ">
                                 <li><a href="/Home" class="nav-link">Trang chủ</a></li>
                                 <li><a href="/Common/Event" class="nav-link">Sự kiện</a></li>
-                                <li class="has-dropdown">
-                                    <a href="/Service" class="active" class="nav-link">Dịch vụ</a>
+                                <li class="has-dropdown active">
+                                    <a href="/Service" class="nav-link">Dịch vụ</a>
                                     <ul class="dropdown">
-                                        <li><a href="/Service/ComboList" class="nav-link">Danh sách combo vé</a></li>
+                                        <li i class="active"><a href="/Service/ComboList" class="nav-link">Danh sách combo vé</a></li>
                                         <li><a href="/Service/OrderTicket" class="nav-link">Danh sách vé</a></li>
-                                        <li class="active"><a href="/Service/OrderFoodAndDrink" class="nav-link">Danh sách đồ ăn</a></li>
+                                        <l><a href="/Service/OrderFoodAndDrink" class="nav-link">Danh sách đồ ăn</a></li>
                                         <li><a href="/Service/OrderGear" class="nav-link">Danh sách dụng cụ</a></li>
                                     </ul>
                                 </li>
