--- a/GreenGardenClient/GreenGardenClient/Views/Service/ComboList.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/ComboList.cshtml
@@ -199,8 +199,8 @@
                             <ul class="site-menu main-menu js-clone-nav ml-auto ">
                                 <li><a href="/Home" class="nav-link">Trang chủ</a></li>
                                 <li><a href="/Common/Event" class="nav-link">Sự kiện</a></li>
-                                <li class="has-dropdown">
-                                    <a href="/Service" class="active" class="nav-link">Dịch vụ</a>
+                                <li class="has-dropdown active">
+                                    <a href="/Service" class="nav-link">Dịch vụ</a>
                                     <ul class="dropdown">
                                         <li class="active"><a href="/Service/ComboList" class="nav-link">Danh sách combo vé</a></li>
                                         <li><a href="/Service/OrderTicket" class="nav-link">Danh sách vé</a></li>
@@ -801,10 +801,10 @@
                             @if (combo != null && combo.Any())
                             {
                                 foreach (var item in combo)
-                                {
+                                    {
                                     <div class="product-item" id="product-@item.ComboId">
                                         <div class="product-image">
-                                            <img src="@item.ImgUrl" alt="Image" class="img-fluid">
+                                            <img src="~/images/Combo/@item.ImgUrl" alt="Image" class="img-fluid">
                                         </div>
                                         <div class="product-content">
                                             <h2><a href="@Url.Action("TripSingle", new { id = item.ComboId })">Vé @item.ComboName</a></h2>
